--- a/jade/about.jade
+++ b/jade/about.jade
@@ -4,9 +4,11 @@ section#about.success
 				hr.star-light
 				.row
 					.comentario.col-sm-5
-						//- img.img-responsive(src='images/yop.jpg',class="img-circle", alt='')
+						img.img-responsive(src='images/sentada.jpg',class="img-circle", alt='')
 					.comentario.col-sm-7
 						p
-						| Soy de aquellas personas que disfruta del lenguaje de programación, por ello mi meta es convertirme en ingeniera de software. Tengo experiencia  trabajando en equipo para el desarrollo de proyecto.
+						| Estudio ingeniería de software y desarrollo de páginas web, tengo un firme propósito de seguir aprendiendo sobre los diferentes lenguajes de programación y construir una carrera en el área de programación y mantenimiento de software.
 						p
-						| Cuando no programo, me dedico a armar rompecabezas, a dibujar y disfrutar de la lectura de un buen libro.
+						| Cuento con 10 años de experiencia como docente en matemática e informática, los cuales me han permitido desarrollar un gran sentido de responsabilidad, así como habilidades de manejo de grupo y liderazgo de proyectos educativos.
+						p
+						| Soy de aquellas personas que disfruta del lenguaje de programación, cuando no programo, me dedico a armar rompecabezas, a dibujar y disfrutar de la lectura de un buen libro.
