--- a/jade/index.jade
+++ b/jade/index.jade
@@ -3,17 +3,26 @@ html(lang="es")
 	head
 		title Mi_Portafolio 
 		meta(charset="utf-8")
+		meta(http-equiv="X-UA-Compatible", content="IE=edge")
 		meta(name="viewport",content="whidth=device-width, initial-scale=1.0")
 		link(href='css/bootstrap.min.css', rel='stylesheet')
 		link(href='font-awesome/css/font-awesome.min.css', rel='stylesheet', type='text/css')
 		link(href="css/animate.css",rel="stylesheet",media="screen")
+		link(link href="css/ihover.css",rel="stylesheet")
+		link(rel="stylesheet", href="styles/main.css")
 		link(href="css/main.css",rel="stylesheet",media="screen")				
 	body#page-top.index
 		include navegador.jade
 		include header.jade
 		include portafolio.jade
 		include about.jade
+		include conocimiento.jade
+		include formulario.jade
+		include imagenes.jade
 		include footer.jade
-		
+	
+		script(src='js/lineaTiempo.js')
 		script(src='js/jquery.js')
 		script(src='js/bootstrap.min.js')
+		script(src="js/creative.js")
+
