--- a/sass/_colores.scss
+++ b/sass/_colores.scss
@@ -3,6 +3,6 @@ $white: #fff;
 $color_mountain_meadow_approx: #18bc9c;
 $color_mountain_meadow_approx: #18bc9c;
 $color_mountain_meadow_90_approx: rgba(24,188,156,.9);
-$backgroundFooter:#233140;
+$hoverColor:#070028;
 $black: black;
-$navHoverbackground:#231A69;
+$navHoverbackground:#341D5F;
