--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,4 @@
 footer .footer-below {
     padding: 25px 0;
-    background-color: $backgroundFooter;
+    background-color: $navHoverbackground;
 }
