--- a/jade/header.jade
+++ b/jade/header.jade
@@ -1,9 +1,59 @@
-header
-			.container
-				.row
-					.col-lg-12.headerP.opacity
-						//- img.img-responsive(src='images/yoop.jpeg',class="img-circle", alt='')
-						.intro-text
-							span.animated.shake.name Hola, mi nombre es Rita, me gusta el diseño y desarrollo de páginas web, te invito a ver parte de lo que aprendi.
-						a.btn.btn-circle.page-scroll.pulse(href='#about')
-							i.fa.fa-angle-double-down
+#myCarousel.carousel.slide.hidden-xs(data-ride='carousel')
+	ol.carousel-indicators
+		li.active(data-target='#myCarousel', data-slide-to='0')
+		li(data-target='#myCarousel', data-slide-to='1')
+		li(data-target='#myCarousel', data-slide-to='2')
+	.carousel-inner(role='listbox')
+		.item.active
+			.slide.slide1.img
+		.item
+			.slide.slide2.img
+		.item
+			.slide.slide3.img
+	a.left.carousel-control(href='#myCarousel', role='button', data-slide='prev')
+		span.glyphicon.glyphicon-chevron-left(aria-hidden='true')
+		span.sr-only Previous
+	a.right.carousel-control(href='#myCarousel', role='button', data-slide='next')
+		span.glyphicon.glyphicon-chevron-right(aria-hidden='true')
+		span.sr-only Next
+.base
+	.intro-text
+			a.btn.btn-circle.page-scroll.pulse(href='#portfolio')
+				i.fa.fa-angle-double-down
+	//- h1.h1center.h1home
+		
+	//- 	|         "La vida es bella codeando."
+		
+
+//- span.animated.shake.name Hola, mi nombre es Rita, me gusta el diseño y desarrollo de páginas web, te invito a ver parte de lo que aprendi.
+
+//- header#myCarousel.carousel.slide
+//- 		.container-fluid
+//- 			.row
+//- 				.col-lg-12.headerP.opacity
+
+//- 						ol.carousel-indicators
+//- 							li.active(data-target='#myCarousel', data-slide-to='0')
+//- 							li(data-target='#myCarousel', data-slide-to='1')
+//- 							li(data-target='#myCarousel', data-slide-to='2')
+//- 						.carousel-inner
+//- 							.item.active
+//- 								img.fill(src='images/amigas1.jpg', class="img", alt='')
+//- 								.carousel-caption
+//- 									//- h2 Caption 1
+//- 							.item
+//- 								img.fill(src='images/yopi.jpg', class="img", alt='')
+//- 								.carousel-caption
+//- 									//- h2 Caption 2
+//- 							.item
+//- 								img.fill(src='images/computadora.jpg', class="img", alt='')
+//- 								.carousel-caption
+//- 									//- h2 Caption 3
+//- 					a.left.carousel-control(href='#myCarousel', data-slide='prev')
+//- 						span.icon-prev
+//- 					a.right.carousel-control(href='#myCarousel', data-slide='next')
+//- 						span.icon-next
+//- 					//- .intro-text
+//- 					//- 	span.animated.shake.name Hola, mi nombre es Rita, me gusta el diseño y desarrollo de páginas web, te invito a ver parte de lo que aprendi.
+//- 				a.btn.btn-circle.page-scroll.pulse(href='#portfolio')
+//- 						i.fa.fa-angle-double-down
