--- a/jade/navegador.jade
+++ b/jade/navegador.jade
@@ -17,4 +17,4 @@ nav.navbar.navbar-custom.navbar-fixed-top(role='navigation')
 						li.page-scroll
 							a(href='#about') Sobre mi
 						li.page-scroll
-							a(href='#contact') Conocimiento
+							a(href='#conocimiento') Conocimiento
