--- a/sass/_portafolio.scss
+++ b/sass/_portafolio.scss
@@ -1,4 +1,7 @@
-
+.caja{
+	
+    padding: 10px 40px 20px 120px;
+}
 #portfolio {
 	* {
 		z-index: 2;
@@ -17,12 +20,32 @@
     z-index: 2;
 }
 
+img:hover{ 
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    border-radius: 5px;
+
+    -webkit-transform: rotate(-7deg);
+	-moz-transform: rotate(-7deg);
+	-ms-transform: rotate(-7deg);
+	transform: rotate(-7deg);
+
+	 opacity: 1;
+   
+   /*Reflection*/
+  -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(0,0,0,0.4)));
+ 
+   /*Glow*/
+  -webkit-box-shadow: 0px 0px 20px rgba(255,255,255,0.8);
+  -moz-box-shadow: 0px 0px 20px rgba(255,255,255,0.8);
+  box-shadow: 0px 0px 20px rgba(255,255,255,0.8);
+}
 
 section.portafolio {
-	margin:10px;
-	height:auto;
-	padding: 30px 0;
-	color: #596790;
+    height: auto;
+    padding: 100px 100px;
+    color: #596790;
+    background: #D2D1EF;
 	&.success {
 		color: $white;
 		background: $color_mountain_meadow_approx;
