--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,23 @@
 @charset "UTF-8";
 body {
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  text-align: center; }
 
-@media screen and (min-width: 320px) and (max-width: 768px) {
+.btn-circle {
+  z-index: 15;
+  width: 70px;
+  height: 70px;
+  padding: 7px 6px;
+  border: 2px solid #fff;
+  border-radius: 35px;
+  font-size: 40px;
+  color: #fff;
+  background: 0 0;
+  -webkit-transition: background .3s ease-in-out;
+  -moz-transition: background .3s ease-in-out;
+  transition: background .3s ease-in-out; }
+
+@media screen and (min-width: 220px) and (max-width: 768px) {
   .navbar-toggle {
     border: 1px solid #fff; }
     .navbar-toggle span {
@@ -25,21 +40,44 @@ body {
   background: #341D5F;
   padding-bottom: 16px; }
 
-section.success {
-  padding: 50px;
-  height: 600px;
-  color: #fff;
+span.name {
+  font-size: 5rem;
+  margin: 0;
+  padding: 3rem 0 0 3rem; }
+
+.intro-text .name {
+  display: block;
+  text-transform: uppercase;
+  font-family: Montserrat, Helvetica Neue, Helvetica, Arial, sans-serif;
   text-shadow: -2px -2px 1px #11094E, 1px -2px 1px #11094E, -2px 1px 1px #11094E, 1px 2px 1px #11094E;
-  background: url(../images/giphy2.gif) bottom center no-repeat #000;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover; }
+  font-size: 1.5em;
+  font-weight: 700;
+  height: 500px;
+  padding-top: 90px; }
 
-.comentario {
-  font-size: 20px; }
+#divider {
+  width: 100%;
+  height: 500px;
+  text-align: center;
+  z-index: 200; }
 
-.img-circle {
-  height: 280px; }
+#divider .divider-bg {
+  background: url("../images/port2.jpg") repeat 0 0 fixed;
+  background-position: 70% -3298.8px;
+  margin: 0 auto;
+  padding: 0;
+  position: absolute;
+  z-index: 200;
+  width: 100%;
+  height: 500px; }
+
+.social-media {
+  padding: 10px;
+  position: relative;
+  z-index: 300;
+  text-align: center;
+  width: 400px;
+  height: 300px; }
 
 /* INTRO SECTION
 ÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇôÔÇô */
@@ -185,26 +223,6 @@ footer .footer-below {
   background-repeat: no-repeat;
   background-size: cover; }
 
-.slide1 {
-  background-image: url("../images/amigas12.jpg"); }
-
-.slide2 {
-  background-image: url("../images/computadora.jpg"); }
-
-.slide3 {
-  background-image: url("../images/yopi.jpg"); }
-
-.base {
-  background-image: url("../images/diagonal.png");
-  width: 100%;
-  z-index: 940;
-  background-repeat: no-repeat;
-  background-position: center top;
-  position: absolute;
-  bottom: 0px;
-  height: 135px;
-  text-align: center; }
-
 .hero-imagen .base {
   bottom: 88px; }
 
@@ -221,34 +239,22 @@ footer .footer-below {
 .h1home {
   margin-top: 57px; }
 
-header.intro-text .name {
-  display: block;
-  text-transform: uppercase;
-  font-family: Montserrat, Helvetica Neue, Helvetica, Arial, sans-serif;
-  text-shadow: -2px -2px 1px #11094E, 1px -2px 1px #11094E, -2px 1px 1px #11094E, 1px 2px 1px #11094E;
-  font-size: 2em;
-  font-weight: 700;
-  height: 300px;
-  padding-top: 200px; }
-
-.btn-circle {
-  width: 70px;
-  height: 70px;
-  margin: 5px 450px;
-  padding: 7px 6px;
-  border: 2px solid #fff;
-  border-radius: 35px;
-  font-size: 40px;
-  color: #fff;
-  background: 0 0;
-  -webkit-transition: background .3s ease-in-out;
-  -moz-transition: background .3s ease-in-out;
-  transition: background .3s ease-in-out; }
+header {
+  text-align: center; }
 
 span.name {
   font-size: 18px;
   margin: 0;
   padding: 3rem 0 0 3rem; }
+
+ol.carousel-indicators {
+  width: 80px;
+  height: 5px;
+  margin-left: 50px;
+  margin-bottom: 30px;
+  align-text: center;
+  padding-bottom: 120px;
+  padding-top: 0px; }
 
 .caja {
   padding: 10px 40px 20px 120px; }
@@ -265,7 +271,7 @@ span.name {
 #portfolio * {
   z-index: 2; }
 
-img:hover {
+.casa:hover {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
   border-radius: 5px;
@@ -290,32 +296,10 @@ section.portafolio {
     color: #fff;
     background: #18bc9c; }
 
-.imagenes {
-  background-color: #2C3E50; }
+section.formulario {
+  background: #24282F; }
 
-#divider {
-  width: 100%;
-  height: 500px;
-  text-align: center;
-  z-index: 200; }
-
-#divider .divider-bg {
-  background: url("../images/codigos.jpg") repeat 0 0 fixed;
-  background-position: 70% -3298.8px;
-  margin: 0 auto;
-  padding: 0;
-  position: absolute;
-  z-index: 200;
-  width: 100%;
-  height: 500px; }
-
-.social-icons {
-  padding-top: 220px; }
-
-a.social-media {
-  padding: 10px;
-  position: relative;
-  z-index: 300;
-  text-align: center; }
+.control-group {
+  padding-top: 20px; }
 
 /*# sourceMappingURL=main.css.map */
